// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`server > GET /v2/quote > excludes the ingress fee for vault swaps 1`] = `
[
  {
    "depositAmount": "100000000",
    "destAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "egressAmount": "1000000000000000000",
    "estimatedDurationSeconds": 144,
    "estimatedDurationsSeconds": {
      "deposit": 30,
      "egress": 102,
      "swap": 12,
    },
    "estimatedPrice": "0.01",
    "includedFees": [
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
    ],
    "isVaultSwap": true,
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "200000",
          "asset": "USDC",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "type": "REGULAR",
  },
]
`;

exports[`server > GET /v2/quote > on chain > properly quotes on chain swaps 1`] = `
[
  {
    "depositAmount": "1000000000000",
    "destAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "egressAmount": "384000000000000000000",
    "estimatedDurationSeconds": 12,
    "estimatedDurationsSeconds": {
      "swap": 12,
    },
    "estimatedPrice": "0.000384",
    "includedFees": [
      {
        "amount": "500000000",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
    ],
    "isOnChain": true,
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "2000000000",
          "asset": "USDC",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "type": "REGULAR",
  },
]
`;

exports[`server > GET /v2/quote > on chain > properly quotes on chain swaps between stables 1`] = `
[
  {
    "depositAmount": "1000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "1000000000000",
    "estimatedDurationSeconds": 12,
    "estimatedDurationsSeconds": {
      "swap": 12,
    },
    "estimatedPrice": "1",
    "includedFees": [
      {
        "amount": "100000000",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
    ],
    "isOnChain": true,
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "USDC",
          "chain": "Solana",
        },
        "fee": {
          "amount": "1000000000",
          "asset": "USDC",
          "chain": "Solana",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedSlippageTolerancePercent": 0.5,
    "srcAsset": {
      "asset": "USDC",
      "chain": "Solana",
    },
    "type": "REGULAR",
  },
]
`;

exports[`server > GET /v2/quote > on chain > respects the minimum network fee 1`] = `
[
  {
    "depositAmount": "1000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "1000000000",
    "estimatedDurationSeconds": 12,
    "estimatedDurationsSeconds": {
      "swap": 12,
    },
    "estimatedPrice": "1",
    "includedFees": [
      {
        "amount": "500000",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
    ],
    "isOnChain": true,
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "USDC",
          "chain": "Solana",
        },
        "fee": {
          "amount": "1000000",
          "asset": "USDC",
          "chain": "Solana",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedSlippageTolerancePercent": 0.5,
    "srcAsset": {
      "asset": "USDC",
      "chain": "Solana",
    },
    "type": "REGULAR",
  },
]
`;

exports[`server > GET /v2/quote > rejects malformed requests 1`] = `
{
  "message": "invalid request",
}
`;
